# ServiceCodeCenter

./: .gitignore  LICENSE  README.md  docker-compose.yml
DataScenarioManager/: DataScenario.py  DataScenarioExecutor.py  main.py  (+2 more)
data-scenario-center-backend/: Dockerfile  environment.yml  pyproject.toml
data-scenario-center-backend/app/: main.py
data-scenario-center-backend/app/api/: main.py
data-scenario-center-backend/app/api/dto/: CamelModel.py  ResponseDSC.py
data-scenario-center-backend/app/api/routes/: DataScenarioRouter.py  ProjectRouter.py  RunningDataScenarioRouter.py
data-scenario-center-backend/app/core/: DataScenarioCenterSettings.py  DataScenarioManager.py  ProjectExecutionManager.py  ProjectInfoManager.py  ProjectManager.py
data-scenario-center-backend/app/dto/: ResponseDSC.py
data-scenario-center-backend/app/dto/project/: CreateProjectDto.py  GetProjectDto.py  PatchProjectDto.py
data-scenario-center-backend/app/entities/: DataScenarioExecutor.py
data-scenario-center-backend/app/exceptions/: AlreadyStartedException.py  FailedKillException.py
data-scenario-center-backend/app/projects/dsm_control/: dsm.yaml  main.py
data-scenario-center-backend/app/projects/dsm_data_manufacture/: dsm.yaml  main.py
data-scenario-center-backend/app/projects/dsm_web/: dsm.yaml
data-scenario-center-backend/app/projects/hello_file/: main.py
data-scenario-center-backend/legacy2/: Dockerfile  requirements.txt
data-scenario-center-backend/practice/: conda-popen.py  conda.py  conda2.py
data-scenario-center-backend/projects/dsm_control/: main.py
(+66 files in other folders)
