[tool.poetry]
name = "data-scenario-center-backend"
version = "0.1.0"
description = ""
authors = ["ekcapaper <92367474+ekcapaper@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
